--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/*@Allysonubius criador deste projeto inicial com Bootstrap.
+
+Direitos Reservados.
+*/
+
+body {
+    font-family: sans-serif, serif, arial;
+    font-size: 12px;
+    color: black;
+}
+
 body {
     background-color: #ccc;
 }
