--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,8 @@ body {
 .container-fluid {
     background-color: white;
 }
+
+.table-hover tbody tr:hover {
+    background-color: #333;
+    color: #fff;
+}
